[package]
name = "my_rust_canister_backend"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13.2"
ic-cdk-macros = "0.13.2"
candid = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
